--- a/ExpenseX/recemTranjectionTableViewCell.xib
+++ b/ExpenseX/recemTranjectionTableViewCell.xib
@@ -10,26 +10,26 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="recemTranjectionTableViewCell" rowHeight="113" id="KGk-i7-Jjw" customClass="recemTranjectionTableViewCell" customModule="ExpenseX" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="415" height="113"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="recemTranjectionTableViewCell" rowHeight="185" id="KGk-i7-Jjw" customClass="recemTranjectionTableViewCell" customModule="ExpenseX" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="606" height="185"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="415" height="113"/>
+                <rect key="frame" x="0.0" y="0.0" width="606" height="185"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zp9-Lv-d8G">
-                        <rect key="frame" x="20" y="0.0" width="375" height="113"/>
+                        <rect key="frame" x="20" y="0.0" width="566" height="185"/>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NsG-uD-0FB">
-                        <rect key="frame" x="0.0" y="0.0" width="415" height="111"/>
+                        <rect key="frame" x="0.0" y="0.0" width="606" height="181.33333333333334"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="062-H7-5uv">
-                                <rect key="frame" x="0.0" y="0.0" width="290.66666666666669" height="61"/>
+                                <rect key="frame" x="0.0" y="0.0" width="424.33333333333331" height="72.666666666666671"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Electricity Bil" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UVl-90-4xx">
-                                        <rect key="frame" x="40" y="5" width="153" height="51"/>
-                                        <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="20"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Electricity Bil" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="UVl-90-4xx">
+                                        <rect key="frame" x="40" y="4.9999999999999964" width="137.66666666666666" height="62.666666666666657"/>
+                                        <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="18"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -42,27 +42,28 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cR8-fk-DHN">
-                                <rect key="frame" x="0.0" y="61" width="290.66666666666669" height="50"/>
+                                <rect key="frame" x="0.0" y="72.666666666666671" width="424.33333333333331" height="54.333333333333329"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- $ 33333" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nJn-fs-1yF">
-                                        <rect key="frame" x="50" y="0.0" width="83" height="18.333333333333332"/>
-                                        <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="18"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- $ 33333" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="nJn-fs-1yF">
+                                        <rect key="frame" x="50" y="0.0" width="74" height="16.333333333333332"/>
+                                        <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="16"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="nJn-fs-1yF" secondAttribute="bottom" constant="5" id="JIc-Br-8dn"/>
                                     <constraint firstItem="nJn-fs-1yF" firstAttribute="top" secondItem="cR8-fk-DHN" secondAttribute="top" id="Qhn-96-TN7"/>
-                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="nJn-fs-1yF" secondAttribute="bottom" constant="10" id="VMp-VK-rcz"/>
                                     <constraint firstItem="nJn-fs-1yF" firstAttribute="leading" secondItem="cR8-fk-DHN" secondAttribute="leading" constant="50" id="gwF-y7-FLf"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="nJn-fs-1yF" secondAttribute="trailing" constant="20" id="lpq-Li-F5K"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t3m-tN-A87">
-                                <rect key="frame" x="290.66666666666669" y="0.0" width="124.33333333333331" height="111"/>
+                                <rect key="frame" x="424.33333333333331" y="0.0" width="181.66666666666669" height="181.33333333333334"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="decrease" translatesAutoresizingMaskIntoConstraints="NO" id="b82-hd-Fye">
-                                        <rect key="frame" x="34.333333333333314" y="27.666666666666668" width="55.666666666666657" height="55.666666666666657"/>
+                                        <rect key="frame" x="45.333333333333378" y="45.333333333333336" width="90.666666666666686" height="90.666666666666657"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="b82-hd-Fye" secondAttribute="height" multiplier="1:1" id="sRV-gc-QQ2"/>
                                         </constraints>
@@ -75,46 +76,73 @@
                                     <constraint firstItem="b82-hd-Fye" firstAttribute="centerX" secondItem="t3m-tN-A87" secondAttribute="centerX" id="T19-o5-7ln"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YMi-Oz-Oj6">
+                                <rect key="frame" x="0.0" y="126.99999999999999" width="424.33333333333331" height="54.333333333333329"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="29 June 2034 / 23:33 pm" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="6eK-Rw-J35">
+                                        <rect key="frame" x="50.000000000000014" y="5" width="190.33333333333337" height="16.333333333333332"/>
+                                        <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="16"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="6eK-Rw-J35" secondAttribute="trailing" constant="20" id="3Ez-5e-nWT"/>
+                                    <constraint firstItem="6eK-Rw-J35" firstAttribute="leading" secondItem="YMi-Oz-Oj6" secondAttribute="leading" constant="50" id="Cjc-eG-wiN"/>
+                                    <constraint firstItem="6eK-Rw-J35" firstAttribute="top" secondItem="YMi-Oz-Oj6" secondAttribute="top" constant="5" id="d5D-yj-nsX"/>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="6eK-Rw-J35" secondAttribute="bottom" constant="10" id="pIO-ur-N3v"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" name="Color"/>
                         <constraints>
                             <constraint firstItem="cR8-fk-DHN" firstAttribute="top" secondItem="062-H7-5uv" secondAttribute="bottom" id="4To-rr-C5b"/>
-                            <constraint firstAttribute="bottom" secondItem="cR8-fk-DHN" secondAttribute="bottom" id="I3d-4t-JFH"/>
-                            <constraint firstItem="062-H7-5uv" firstAttribute="height" secondItem="NsG-uD-0FB" secondAttribute="height" multiplier="0.55" id="IQz-yk-ckM"/>
+                            <constraint firstItem="t3m-tN-A87" firstAttribute="height" secondItem="NsG-uD-0FB" secondAttribute="height" id="97L-0X-fPr"/>
+                            <constraint firstItem="YMi-Oz-Oj6" firstAttribute="leading" secondItem="NsG-uD-0FB" secondAttribute="leading" id="9RZ-qx-3D5"/>
+                            <constraint firstItem="062-H7-5uv" firstAttribute="height" secondItem="NsG-uD-0FB" secondAttribute="height" multiplier="0.4" id="IQz-yk-ckM"/>
                             <constraint firstItem="t3m-tN-A87" firstAttribute="top" secondItem="NsG-uD-0FB" secondAttribute="top" id="Jsu-Vr-NQX"/>
                             <constraint firstAttribute="bottom" secondItem="t3m-tN-A87" secondAttribute="bottom" id="K6e-ba-rLK"/>
                             <constraint firstItem="062-H7-5uv" firstAttribute="width" secondItem="NsG-uD-0FB" secondAttribute="width" multiplier="0.7" id="Lki-VI-pxe"/>
                             <constraint firstAttribute="trailing" secondItem="t3m-tN-A87" secondAttribute="trailing" id="Mh5-re-jcc"/>
-                            <constraint firstItem="cR8-fk-DHN" firstAttribute="height" secondItem="NsG-uD-0FB" secondAttribute="height" multiplier="0.45" id="S2J-tg-1q3"/>
+                            <constraint firstItem="cR8-fk-DHN" firstAttribute="height" secondItem="NsG-uD-0FB" secondAttribute="height" multiplier="0.3" id="S2J-tg-1q3"/>
+                            <constraint firstItem="t3m-tN-A87" firstAttribute="leading" secondItem="YMi-Oz-Oj6" secondAttribute="trailing" id="Sr7-hD-CZW"/>
                             <constraint firstItem="062-H7-5uv" firstAttribute="top" secondItem="NsG-uD-0FB" secondAttribute="top" id="XQn-45-2gX"/>
                             <constraint firstItem="cR8-fk-DHN" firstAttribute="width" secondItem="NsG-uD-0FB" secondAttribute="width" multiplier="0.7" id="XiT-eh-QDo"/>
+                            <constraint firstAttribute="bottom" secondItem="YMi-Oz-Oj6" secondAttribute="bottom" id="cz2-5l-CXg"/>
+                            <constraint firstItem="YMi-Oz-Oj6" firstAttribute="height" secondItem="NsG-uD-0FB" secondAttribute="height" multiplier="0.3" id="d5T-rC-A9L"/>
                             <constraint firstItem="062-H7-5uv" firstAttribute="leading" secondItem="NsG-uD-0FB" secondAttribute="leading" id="daX-Pa-kQq"/>
+                            <constraint firstItem="YMi-Oz-Oj6" firstAttribute="top" secondItem="cR8-fk-DHN" secondAttribute="bottom" id="fDo-Et-G0O"/>
                             <constraint firstItem="cR8-fk-DHN" firstAttribute="leading" secondItem="NsG-uD-0FB" secondAttribute="leading" id="fje-oT-00D"/>
                             <constraint firstItem="t3m-tN-A87" firstAttribute="width" secondItem="NsG-uD-0FB" secondAttribute="width" multiplier="0.3" id="has-Ub-wNx"/>
                             <constraint firstItem="t3m-tN-A87" firstAttribute="leading" secondItem="062-H7-5uv" secondAttribute="trailing" id="lFu-mh-OyF"/>
+                            <constraint firstItem="t3m-tN-A87" firstAttribute="leading" secondItem="cR8-fk-DHN" secondAttribute="trailing" id="o5p-Ub-DWa"/>
+                            <constraint firstItem="YMi-Oz-Oj6" firstAttribute="width" secondItem="NsG-uD-0FB" secondAttribute="width" multiplier="0.7" id="pBk-a1-Ayf"/>
                         </constraints>
                     </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="NsG-uD-0FB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="4g6-tu-Ukj"/>
+                    <constraint firstItem="NsG-uD-0FB" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="0.98" id="5W9-jI-Mow"/>
                     <constraint firstAttribute="trailing" secondItem="NsG-uD-0FB" secondAttribute="trailing" id="GlJ-NB-5cq"/>
                     <constraint firstAttribute="trailing" secondItem="zp9-Lv-d8G" secondAttribute="trailing" constant="20" id="YZH-Lv-pMu"/>
                     <constraint firstAttribute="bottom" secondItem="zp9-Lv-d8G" secondAttribute="bottom" id="aGJ-yM-hq0"/>
                     <constraint firstItem="zp9-Lv-d8G" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="fc0-00-XmV"/>
+                    <constraint firstItem="zp9-Lv-d8G" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" id="h3m-iS-Y5w"/>
                     <constraint firstItem="zp9-Lv-d8G" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="jRB-jY-Bt5"/>
                     <constraint firstItem="NsG-uD-0FB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="vrd-rs-Ihv"/>
-                    <constraint firstAttribute="bottom" secondItem="NsG-uD-0FB" secondAttribute="bottom" constant="2" id="xYH-9R-FQN"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
+                <outlet property="dateAndTime" destination="6eK-Rw-J35" id="tp7-WK-HcZ"/>
                 <outlet property="imageSymble" destination="b82-hd-Fye" id="CXw-QR-h4p"/>
                 <outlet property="money" destination="nJn-fs-1yF" id="BNh-q7-q17"/>
                 <outlet property="name" destination="UVl-90-4xx" id="e5j-k1-XJW"/>
             </connections>
-            <point key="canvasLocation" x="222.13740458015266" y="10.91549295774648"/>
+            <point key="canvasLocation" x="520.61068702290072" y="34.859154929577464"/>
         </tableViewCell>
     </objects>
     <resources>
